--- a/influencer-products.html
+++ b/influencer-products.html
@@ -32,8 +32,8 @@
                 <h1>
                     Start your journy as Infliencer
                 </h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis numquam deserunt optio iste
-                    culpa ex!</p>
+                <p>When it makes sense for your product or service, feel free to experiment with influencer content that
+                    piggybacks on existing social media trends.</p>
                 <div>
                     <button class="button">Preebook now<i class="fas fa-arrow-right"></i></button>
                 </div>
